# house-price-predictor

./: Dockerfile  commands.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: mlops-pipeline.yaml
configs/: model_config.yaml
deployment/kubernetes/: deployment.yaml
models/trained/: house_price_model.pkl  preprocessor.pkl
notebooks/: 00_data_engineering.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_experimentation.ipynb
src/api/: README.md  requirements.txt
streamlit_app/: Dockerfile  README.md  requirements.txt
