[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
